--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -22,27 +22,66 @@
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>1021</width>
+      <width>1031</width>
       <height>731</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
       <string>Main</string>
      </attribute>
+     <widget class="QLabel" name="label_indicator2">
+      <property name="geometry">
+       <rect>
+        <x>830</x>
+        <y>50</y>
+        <width>21</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>850</x>
+        <y>20</y>
+        <width>31</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_pic">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>1031</width>
+        <height>731</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
      <widget class="qfi_PFD" name="graphicsPFD_2">
       <property name="enabled">
        <bool>false</bool>
       </property>
       <property name="geometry">
        <rect>
-        <x>-140</x>
-        <y>-50</y>
-        <width>700</width>
-        <height>700</height>
+        <x>240</x>
+        <y>50</y>
+        <width>481</width>
+        <height>461</height>
        </rect>
       </property>
       <property name="focusPolicy">
@@ -67,280 +106,12 @@
        <set>QGraphicsView::IndirectPainting</set>
       </property>
      </widget>
-     <widget class="QGroupBox" name="groupBox">
-      <property name="geometry">
-       <rect>
-        <x>510</x>
-        <y>140</y>
-        <width>491</width>
-        <height>391</height>
-       </rect>
-      </property>
-      <property name="title">
-       <string>Motors</string>
-      </property>
-      <widget class="QLabel" name="label_motors">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>20</y>
-         <width>461</width>
-         <height>361</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-      <widget class="QTextBrowser" name="textBrowser">
-       <property name="geometry">
-        <rect>
-         <x>50</x>
-         <y>10</y>
-         <width>101</width>
-         <height>51</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QTextBrowser" name="textBrowser_2">
-       <property name="geometry">
-        <rect>
-         <x>190</x>
-         <y>10</y>
-         <width>101</width>
-         <height>51</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QTextBrowser" name="textBrowser_3">
-       <property name="geometry">
-        <rect>
-         <x>330</x>
-         <y>10</y>
-         <width>101</width>
-         <height>51</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QTextBrowser" name="textBrowser_4">
-       <property name="geometry">
-        <rect>
-         <x>370</x>
-         <y>170</y>
-         <width>101</width>
-         <height>51</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QTextBrowser" name="textBrowser_5">
-       <property name="geometry">
-        <rect>
-         <x>330</x>
-         <y>320</y>
-         <width>101</width>
-         <height>51</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QTextBrowser" name="textBrowser_6">
-       <property name="geometry">
-        <rect>
-         <x>190</x>
-         <y>320</y>
-         <width>101</width>
-         <height>51</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QTextBrowser" name="textBrowser_7">
-       <property name="geometry">
-        <rect>
-         <x>50</x>
-         <y>320</y>
-         <width>101</width>
-         <height>51</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QTextBrowser" name="textBrowser_8">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>170</y>
-         <width>101</width>
-         <height>51</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_indicator1">
-       <property name="geometry">
-        <rect>
-         <x>110</x>
-         <y>20</y>
-         <width>31</width>
-         <height>31</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_indicator1_2">
-       <property name="geometry">
-        <rect>
-         <x>250</x>
-         <y>20</y>
-         <width>31</width>
-         <height>31</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_indicator1_3">
-       <property name="geometry">
-        <rect>
-         <x>390</x>
-         <y>20</y>
-         <width>31</width>
-         <height>31</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_indicator1_4">
-       <property name="geometry">
-        <rect>
-         <x>430</x>
-         <y>180</y>
-         <width>31</width>
-         <height>31</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_indicator1_5">
-       <property name="geometry">
-        <rect>
-         <x>390</x>
-         <y>330</y>
-         <width>31</width>
-         <height>31</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_indicator1_6">
-       <property name="geometry">
-        <rect>
-         <x>250</x>
-         <y>330</y>
-         <width>31</width>
-         <height>31</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_indicator1_7">
-       <property name="geometry">
-        <rect>
-         <x>110</x>
-         <y>330</y>
-         <width>31</width>
-         <height>31</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_indicator1_8">
-       <property name="geometry">
-        <rect>
-         <x>70</x>
-         <y>180</y>
-         <width>31</width>
-         <height>31</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </widget>
-     <widget class="QPushButton" name="pushButton_Bluetooth">
-      <property name="geometry">
-       <rect>
-        <x>510</x>
-        <y>40</y>
-        <width>171</width>
-        <height>61</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>14</pointsize>
-        <kerning>true</kerning>
-       </font>
-      </property>
-      <property name="text">
-       <string>Bluetooth</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_indicator2">
-      <property name="geometry">
-       <rect>
-        <x>640</x>
-        <y>60</y>
-        <width>21</width>
-        <height>21</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label">
-      <property name="geometry">
-       <rect>
-        <x>520</x>
-        <y>50</y>
-        <width>31</width>
-        <height>41</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_pic">
-      <property name="geometry">
-       <rect>
-        <x>-10</x>
-        <y>-10</y>
-        <width>1031</width>
-        <height>731</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
      <zorder>label_pic</zorder>
-     <zorder>graphicsPFD_2</zorder>
-     <zorder>groupBox</zorder>
-     <zorder>pushButton_Bluetooth</zorder>
      <zorder>label_indicator2</zorder>
      <zorder>label</zorder>
+     <zorder>graphicsPFD_2</zorder>
+     <zorder>label_motors</zorder>
+     <zorder>graphicsPFD_2</zorder>
     </widget>
     <widget class="QWidget" name="tab_1">
      <attribute name="title">
