--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,17 +6,93 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1035</width>
-    <height>775</height>
+    <width>1024</width>
+    <height>768</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="palette">
+   <palette>
+    <active>
+     <colorrole role="Base">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>255</red>
+        <green>255</green>
+        <blue>255</blue>
+       </color>
+      </brush>
+     </colorrole>
+     <colorrole role="ToolTipText">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>255</red>
+        <green>255</green>
+        <blue>255</blue>
+       </color>
+      </brush>
+     </colorrole>
+    </active>
+    <inactive>
+     <colorrole role="Base">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>255</red>
+        <green>255</green>
+        <blue>255</blue>
+       </color>
+      </brush>
+     </colorrole>
+     <colorrole role="ToolTipText">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>255</red>
+        <green>255</green>
+        <blue>255</blue>
+       </color>
+      </brush>
+     </colorrole>
+    </inactive>
+    <disabled>
+     <colorrole role="Base">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>240</red>
+        <green>240</green>
+        <blue>240</blue>
+       </color>
+      </brush>
+     </colorrole>
+     <colorrole role="ToolTipText">
+      <brush brushstyle="SolidPattern">
+       <color alpha="255">
+        <red>255</red>
+        <green>255</green>
+        <blue>255</blue>
+       </color>
+      </brush>
+     </colorrole>
+    </disabled>
+   </palette>
+  </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Control</string>
   </property>
   <property name="autoFillBackground">
    <bool>false</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
    <widget class="QTabWidget" name="tabWidget">
     <property name="geometry">
      <rect>
@@ -26,8 +102,14 @@
       <height>731</height>
      </rect>
     </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -64,7 +146,7 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>1031</width>
+        <width>1071</width>
         <height>731</height>
        </rect>
       </property>
@@ -78,11 +160,17 @@
       </property>
       <property name="geometry">
        <rect>
-        <x>240</x>
-        <y>50</y>
-        <width>481</width>
-        <height>461</height>
+        <x>230</x>
+        <y>0</y>
+        <width>791</width>
+        <height>721</height>
        </rect>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>671</width>
+        <height>0</height>
+       </size>
       </property>
       <property name="focusPolicy">
        <enum>Qt::NoFocus</enum>
@@ -106,12 +194,38 @@
        <set>QGraphicsView::IndirectPainting</set>
       </property>
      </widget>
+     <widget class="QLabel" name="label_28">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>680</y>
+        <width>61</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Bluetooth:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_29">
+      <property name="geometry">
+       <rect>
+        <x>80</x>
+        <y>680</y>
+        <width>47</width>
+        <height>13</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>TextLabel</string>
+      </property>
+     </widget>
      <zorder>label_pic</zorder>
      <zorder>label_indicator2</zorder>
      <zorder>label</zorder>
      <zorder>graphicsPFD_2</zorder>
-     <zorder>label_motors</zorder>
-     <zorder>graphicsPFD_2</zorder>
+     <zorder>label_28</zorder>
+     <zorder>label_29</zorder>
     </widget>
     <widget class="QWidget" name="tab_1">
      <attribute name="title">
@@ -1627,7 +1741,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1035</width>
+     <width>1024</width>
      <height>21</height>
     </rect>
    </property>
