--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -144,7 +144,7 @@
      <widget class="QLabel" name="label_pic">
       <property name="geometry">
        <rect>
-        <x>0</x>
+        <x>30</x>
         <y>0</y>
         <width>1071</width>
         <height>731</height>
@@ -197,8 +197,8 @@
      <widget class="QLabel" name="label_28">
       <property name="geometry">
        <rect>
-        <x>20</x>
-        <y>680</y>
+        <x>10</x>
+        <y>640</y>
         <width>61</width>
         <height>16</height>
        </rect>
@@ -210,10 +210,10 @@
      <widget class="QLabel" name="label_BT">
       <property name="geometry">
        <rect>
-        <x>80</x>
-        <y>680</y>
-        <width>47</width>
-        <height>13</height>
+        <x>70</x>
+        <y>640</y>
+        <width>91</width>
+        <height>16</height>
        </rect>
       </property>
       <property name="text">
@@ -447,7 +447,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>460</y>
+        <y>440</y>
         <width>47</width>
         <height>13</height>
        </rect>
@@ -460,7 +460,7 @@
       <property name="geometry">
        <rect>
         <x>70</x>
-        <y>460</y>
+        <y>440</y>
         <width>47</width>
         <height>13</height>
        </rect>
@@ -473,7 +473,7 @@
       <property name="geometry">
        <rect>
         <x>170</x>
-        <y>460</y>
+        <y>440</y>
         <width>47</width>
         <height>13</height>
        </rect>
@@ -516,7 +516,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>480</y>
+        <y>460</y>
         <width>51</width>
         <height>23</height>
        </rect>
@@ -526,7 +526,7 @@
       <property name="geometry">
        <rect>
         <x>90</x>
-        <y>480</y>
+        <y>460</y>
         <width>51</width>
         <height>23</height>
        </rect>
@@ -536,10 +536,131 @@
       <property name="geometry">
        <rect>
         <x>160</x>
-        <y>480</y>
+        <y>460</y>
         <width>51</width>
         <height>23</height>
        </rect>
+      </property>
+     </widget>
+     <widget class="QLCDNumber" name="lcdNumber_Received">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>510</y>
+        <width>51</width>
+        <height>31</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_Grab_2">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>490</y>
+        <width>47</width>
+        <height>13</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Received</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_Grab_3">
+      <property name="geometry">
+       <rect>
+        <x>80</x>
+        <y>490</y>
+        <width>47</width>
+        <height>13</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Lost</string>
+      </property>
+     </widget>
+     <widget class="QLCDNumber" name="lcdNumber_Lost">
+      <property name="geometry">
+       <rect>
+        <x>80</x>
+        <y>510</y>
+        <width>51</width>
+        <height>31</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_Grab_4">
+      <property name="geometry">
+       <rect>
+        <x>140</x>
+        <y>490</y>
+        <width>61</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Percent lost</string>
+      </property>
+     </widget>
+     <widget class="QLCDNumber" name="lcdNumber_Percent">
+      <property name="geometry">
+       <rect>
+        <x>160</x>
+        <y>510</y>
+        <width>51</width>
+        <height>31</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="checkBox_2">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>620</y>
+        <width>131</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Inverse depth</string>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="checkBox_SDepth">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>560</y>
+        <width>101</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Stabilize Depth</string>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="checkBox_SRoll">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>580</y>
+        <width>111</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Stabilize Roll</string>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="checkBox_SPitch">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>600</y>
+        <width>91</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Stabilize Pitch</string>
       </property>
      </widget>
      <zorder>label_pic</zorder>
@@ -576,6 +697,16 @@
      <zorder>lcdNumber_velocity_Grab</zorder>
      <zorder>lcdNumber_velocity_Rotate</zorder>
      <zorder>lcdNumber_velocity_Tilt</zorder>
+     <zorder>lcdNumber_Received</zorder>
+     <zorder>label_Grab_2</zorder>
+     <zorder>label_Grab_3</zorder>
+     <zorder>lcdNumber_Lost</zorder>
+     <zorder>label_Grab_4</zorder>
+     <zorder>lcdNumber_Percent</zorder>
+     <zorder>checkBox_2</zorder>
+     <zorder>checkBox_SDepth</zorder>
+     <zorder>checkBox_SRoll</zorder>
+     <zorder>checkBox_SPitch</zorder>
     </widget>
     <widget class="QWidget" name="tab_1">
      <attribute name="title">
@@ -719,7 +850,7 @@
          </rect>
         </property>
         <property name="text">
-         <string>K1</string>
+         <string>Position K</string>
         </property>
        </widget>
        <widget class="QLabel" name="label_19">
@@ -732,7 +863,7 @@
          </rect>
         </property>
         <property name="text">
-         <string>K2</string>
+         <string>Speed K</string>
         </property>
        </widget>
        <widget class="QLabel" name="label_20">
@@ -885,7 +1016,7 @@
          </rect>
         </property>
         <property name="text">
-         <string>K1</string>
+         <string>Position K</string>
         </property>
        </widget>
        <widget class="QLabel" name="label_3">
@@ -898,7 +1029,7 @@
          </rect>
         </property>
         <property name="text">
-         <string>K2</string>
+         <string>Speed K</string>
         </property>
        </widget>
        <widget class="QLabel" name="label_4">
@@ -1051,7 +1182,7 @@
          </rect>
         </property>
         <property name="text">
-         <string>K1</string>
+         <string>Position K</string>
         </property>
        </widget>
        <widget class="QLabel" name="label_11">
@@ -1064,7 +1195,7 @@
          </rect>
         </property>
         <property name="text">
-         <string>K2</string>
+         <string>Speed K</string>
         </property>
        </widget>
        <widget class="QLabel" name="label_12">
@@ -1217,7 +1348,7 @@
          </rect>
         </property>
         <property name="text">
-         <string>K1</string>
+         <string>Position K</string>
         </property>
        </widget>
        <widget class="QLabel" name="label_15">
@@ -1230,7 +1361,7 @@
          </rect>
         </property>
         <property name="text">
-         <string>K2</string>
+         <string>Speed K</string>
         </property>
        </widget>
        <widget class="QLabel" name="label_16">
@@ -1360,6 +1491,38 @@
          <double>0.000500000000000</double>
         </property>
        </widget>
+      </widget>
+      <widget class="QPushButton" name="pushButton_load_config">
+       <property name="geometry">
+        <rect>
+         <x>60</x>
+         <y>380</y>
+         <width>75</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Load from file</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="pushButton_save_config">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="geometry">
+        <rect>
+         <x>140</x>
+         <y>380</y>
+         <width>75</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Save to file</string>
+       </property>
+       <property name="checkable">
+        <bool>false</bool>
+       </property>
       </widget>
      </widget>
      <widget class="QGroupBox" name="groupBox_8">
@@ -2037,6 +2200,9 @@
          <height>22</height>
         </rect>
        </property>
+       <property name="maximum">
+        <number>10000</number>
+       </property>
       </widget>
       <widget class="QSpinBox" name="spinBox_PauseAfterReceived">
        <property name="enabled">
@@ -2109,38 +2275,6 @@
       </property>
       <property name="text">
        <string>Response</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="pushButton_load_config">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>680</y>
-        <width>75</width>
-        <height>23</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Load from file</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="pushButton_save_config">
-      <property name="enabled">
-       <bool>true</bool>
-      </property>
-      <property name="geometry">
-       <rect>
-        <x>100</x>
-        <y>680</y>
-        <width>75</width>
-        <height>23</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Save to file</string>
-      </property>
-      <property name="checkable">
-       <bool>false</bool>
       </property>
      </widget>
     </widget>
