--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -957,6 +957,9 @@
         <height>17</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">color:white;</string>
+      </property>
       <property name="text">
        <string>Inverse depth</string>
       </property>
@@ -969,6 +972,9 @@
         <width>101</width>
         <height>17</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color:white;</string>
       </property>
       <property name="text">
        <string>Stabilize Depth</string>
@@ -983,6 +989,9 @@
         <height>17</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">color:white;</string>
+      </property>
       <property name="text">
        <string>Stabilize Roll</string>
       </property>
@@ -996,8 +1005,174 @@
         <height>17</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">color:white;</string>
+      </property>
       <property name="text">
        <string>Stabilize Pitch</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="NextButton">
+      <property name="geometry">
+       <rect>
+        <x>933</x>
+        <y>642</y>
+        <width>61</width>
+        <height>28</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>9</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Next</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="StartPauseButton">
+      <property name="geometry">
+       <rect>
+        <x>807</x>
+        <y>642</y>
+        <width>61</width>
+        <height>28</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>9</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Start</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="Mt">
+      <property name="geometry">
+       <rect>
+        <x>841</x>
+        <y>594</y>
+        <width>111</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+        <weight>50</weight>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color:white;</string>
+      </property>
+      <property name="text">
+       <string>Mission time:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="Missiontime">
+      <property name="geometry">
+       <rect>
+        <x>947</x>
+        <y>594</y>
+        <width>55</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color:white;</string>
+      </property>
+      <property name="text">
+       <string>00:00</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="ClearButton">
+      <property name="geometry">
+       <rect>
+        <x>870</x>
+        <y>642</y>
+        <width>61</width>
+        <height>28</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>9</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Clear</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="Mn">
+      <property name="geometry">
+       <rect>
+        <x>807</x>
+        <y>580</y>
+        <width>21</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+        <weight>50</weight>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color:white;</string>
+      </property>
+      <property name="text">
+       <string>1</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="Ct">
+      <property name="geometry">
+       <rect>
+        <x>857</x>
+        <y>559</y>
+        <width>81</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color:white;</string>
+      </property>
+      <property name="text">
+       <string>Total time:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="Commontime">
+      <property name="geometry">
+       <rect>
+        <x>947</x>
+        <y>559</y>
+        <width>55</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color:white;</string>
+      </property>
+      <property name="text">
+       <string>00:00</string>
       </property>
      </widget>
      <zorder>graphicsPFD_2</zorder>
@@ -1038,6 +1213,14 @@
      <zorder>checkBox_SDepth</zorder>
      <zorder>checkBox_SRoll</zorder>
      <zorder>checkBox_SPitch</zorder>
+     <zorder>NextButton</zorder>
+     <zorder>StartPauseButton</zorder>
+     <zorder>Mt</zorder>
+     <zorder>Missiontime</zorder>
+     <zorder>ClearButton</zorder>
+     <zorder>Mn</zorder>
+     <zorder>Ct</zorder>
+     <zorder>Commontime</zorder>
     </widget>
     <widget class="QWidget" name="tab_1">
      <attribute name="title">
